It can compile now

--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -142,3 +142,12 @@ long= Breast Ultra-Sound
   long  = Radial Basis Function
 }
 
+\DeclareAcronym{dr}{
+  short = DR,
+  long  = Diabetic Retinopathy
+}
+
+\DeclareAcronym{dme}{
+  short = DME,
+  long  = Diabetic Macula Edema
+}
