--- a/content/intro/intro.tex
+++ b/content/intro/intro.tex
@@ -3,7 +3,7 @@
 
 \section{Introduction}
 
-Eye diseases such as \ac{dr} and {dme} are the most common causes of irreversible vision loss in individuals with diabetes. It is estimated that eye diseases will cost US\$500 million annually in healthcare and associated costs in the United States alone~\cite{Sharma2005}. Moreover, the prevalence of DR is expected to grow exponentially and affect over 300 millions people worldwide by 2025~\cite{Wild2004}.
+Eye diseases such as \ac{dr} and \ac{dme} are the most common causes of irreversible vision loss in individuals with diabetes. It is estimated that eye diseases will cost US\$500 million annually in healthcare and associated costs in the United States alone~\cite{Sharma2005}. Moreover, the prevalence of DR is expected to grow exponentially and affect over 300 millions people worldwide by 2025~\cite{Wild2004}.
 Early detection and treatment of \ac{dr} and \ac{dme} is the key to preventing blindness.
 The detection and diagnosis of retinal diseases are based on the detection of vascular abnormalities or lesions in the retina. 
 \Ac{cad} systems have focused on the automatic analysis of fundus images in past decades~\cite{Abramoff2010,Trucco2013}.
@@ -37,3 +37,7 @@ Section~3 shows experimental results using two different datasets and comparison
 
 
 %----------
+
+%%% Local Variables:
+%%% TeX-master: "../../master.tex"
+%%% End:
