--- a/latex/filesystem/package.tex
+++ b/latex/filesystem/package.tex
@@ -28,6 +28,9 @@
 % Managing TODOES and unfinished figures
 \usepackage{todonotes}
 
+% Package for nice table
+\usepackage{booktabs}
+
 % Mathematics extra symols and commands
 \usepackage{amssymb, amsmath}
 \usepackage{pifont,amsfonts} % import fonts for tick and x-mark
