--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -23,3 +23,8 @@ Features 	& & &\multicolumn{4}{c}{LBP}&	 & & & &\multicolumn{4}{c}{LBP+PCA}& & &
 \end{table}
 
 %----------
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../../master"
+%%% End: 
