--- a/master.tex
+++ b/master.tex
@@ -22,9 +22,9 @@ THIS IS THE ABSTRACT
 
 %% Incldue the content without .tex extension
 \acresetall  % reset the acronyms from the abstract
-\include*{content/intro/intro}          % the file wihtout .tex
-\include*{content/method/method} 
-\include*{content/results/results}
+\input{content/intro/intro}          % the file wihtout .tex
+\input{content/method/method} 
+\input{content/results/results}
 
 \section{Conclusions}
 
