--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -151,3 +151,48 @@ long= Breast Ultra-Sound
   short = DME,
   long  = Diabetic Macula Edema
 }
+
+\DeclareAcronym{oct}{
+  short = OCT,
+  long  = Optical Coherence Tomography
+}
+
+\DeclareAcronym{sdoct}{
+  short = SD-OCT,
+  long  = Spectral Domain OCT
+}
+
+\DeclareAcronym{amd}{
+  short = AMD,
+  long = Age-related Macular Degeneration
+}
+
+\DeclareAcronym{hog}{
+  short = HOG,
+  long = Histogram of Oriented Gradients
+}
+
+\DeclareAcronym{svm}{
+  short = SVM,
+  long = Support Vector Machines
+}
+
+\DeclareAcronym{bow}{
+  short = BoW,
+  long = Bag-of-Words
+}
+
+\DeclareAcronym{rf}{
+  short = RF,
+  long = Random Forest
+}
+
+\DeclareAcronym{roc}{
+  short = ROC,
+  long = Receiver Operating Characteristic
+}
+
+\DeclareAcronym{auc}{
+  short = AUC,
+  long = Area Under the Curve
+}
