--- a/latex/filesystem/package.tex
+++ b/latex/filesystem/package.tex
@@ -92,3 +92,9 @@
 %             Cleveref is recomended to load late
 %\usepackage{hyperref}
 \usepackage{cleveref}
+
+% SI units
+\usepackage{siunitx}
+
+% Nice package with citeauthor
+%\usepackage{natbib}
