Finished to correct the AC in the introduction

--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -35,11 +35,6 @@ long= Breast Ultra-Sound
   long  = Machine Learning
 }
 
-\DeclareAcronym{svm}{
-  short = SVM,
-  long  = Support Vector Machines
-}
-
 \DeclareAcronym{acm}{
   short = ACM,
   long  = Active Contour Model
@@ -195,4 +190,14 @@ long= Breast Ultra-Sound
 \DeclareAcronym{auc}{
   short = AUC,
   long = Area Under the Curve
+}
+
+\DeclareAcronym{lbp}{
+  short = LBP,
+  long = Local Binary Patterns
+}
+
+\DeclareAcronym{pca}{
+  short = PCA,
+  long = Principal Component Analysis
 }
