--- a/content/intro/intro.tex
+++ b/content/intro/intro.tex
@@ -20,18 +20,17 @@ Few works have addressed the specific problem of \ac{dme} and its associated fea
 The authors in~\cite{Srinivasan2014} proposed a classification method for the detection of \ac{dme} versus \ac{amd} and normal \ac{oct} images. The method is based on pre-processing to reduce the speckle noise in \ac{oct} images and flattening of the images to reduce the variation of retinal curvature among patients. Then, \ac{hog} are extracted in each image of a volume and a linear \ac{svm} is used for classification. On a dataset of 45 patients containing 15 normal subjects, 15 \ac{dme} patients and 15 \ac{amd} patients, the methods achieved a correct classification of $100 \%$, $100 \%$ and $86.67 \%$ for \ac{amd}, \ac{dme} and normal cases respectively. 
 Venhuizen2015~\textit{et al.}~\cite{Venhuizen2015} also proposed a method for \ac{oct} images classification using the \ac{bow} models.
 The method starts with the selection of interest points in each individual B-scan by keeping the points corresponding to the top $3 \%$ vertical gradient values. Then, a $ 9\times 9$ patch of intensity values is extracted around each selected interest point, and PCA is applied to reduce the dimension of every patch from $81$ ($9\times 9$) to $9$. 
-All extracted patches are used to create a codebook using \textit{k}-means clustering, and the obtained codebook from training is used to represent each \ac{oct} volume as a patch occurrence histogram. Finally, this histogram is used as feature vector to train a \ac{rf} with a maximum of $100$ trees. The method was used to classify \ac{oct} volumes between \ac{amd} and normal cases and achieved an \ac{auc} of 0.984 with a dataset of 384 \ac{oct} volumes. 
-The most similar work to ours is the work of Liu \textit{et al.}~\cite{Liu2011} who proposed a method for macular pathology detection in OCT images using local binary patterns (LBP) as features.
-The method starts by aligning and flattening the images, then a 3-level multi-scale spatial pyramid is created and LBP histograms are extracted in each block at every level of the pyramid. All obtained LBP histograms are concatenated into a global descriptor whose dimension is reduced using PCA. Finally a SVM is used as classifier. The method achieved good results in detection OCT scan containing different pathology such as DME or AMD, with an AUC of 0.93 using a dataset of 326 OCT scans.  
+All extracted patches are used to create a codebook using \textit{k}-means clustering, and the obtained codebook from training is used to represent each \ac{oct} volume as a patch occurrence histogram. Finally, this histogram is used as feature vector to train a \ac{rf} with a maximum of $100$ trees. The method was used to classify \ac{oct} volumes between \ac{amd} and normal cases and achieved an \ac{auc} of $0.984$ with a dataset of $384$ \ac{oct} volumes. 
+The most similar work to ours is the work of Liu~\textit{et al.}~\cite{Liu2011} who proposed a method for macular pathology detection in \ac{oct} images using \ac{lbp} as features.
+The method starts by aligning and flattening the images, then a $3$-level multi-scale spatial pyramid is created and \ac{lbp} histograms are extracted in each block at every level of the pyramid. All obtained \ac{lbp} histograms are concatenated into a global descriptor whose dimension is reduced using \ac{pca}. Finally a \ac{svm} is used as classifier. The method achieved good results in detection \ac{oct} scan containing different pathology such as \ac{dme} or \ac{amd}, with an \ac{auc} of $0.93$ using a dataset of $326$ OCT scans.  
 
 
-In this paper, we propose a method for automatic identification of patients with DME versus normal subjects by classifying the OCT volumes. Our method is based on LBP features to describe the texture of OCT images and dictionary learning using the BoW approach~\cite{Sivic2003}.
-However, we do not based on interest points selection as opposed to the work of 
-Venhuizen \textit{et al.}~\cite{Venhuizen2015} who also employed the BoW approach. We rather divide the images into local patches and extract a dense set of LBP descriptors.
-We also use the entire OCT volume and extract 3D-LBP features to describe the volume, which is different from the work of Liu \textit{et al.}~\cite{Liu2011} who classified only the foveal scan for each patient.
-We will show in the experiments, Section 4, that using the 3D-LBP descriptor provides better classification performances than extraction LBP in each individual B-scan.
+In this paper, we propose a method for automatic identification of patients with \ac{dme} versus normal subjects by classifying the \ac{oct} volumes. Our method is based on \ac{lbp} features to describe the texture of \ac{oct} images and dictionary learning using the \ac{bow} approach~\cite{Sivic2003}.
+However, we do not based on interest points selection as opposed to the work of Venhuizen~\textit{et al.}~\cite{Venhuizen2015} who also employed the \ac{bow} approach. We rather divide the images into local patches and extract a dense set of \ac{lbp} descriptors.
+We also use the entire \ac{oct} volume and extract 3D-\ac{lbp} features to describe the volume, which is different from the work of Liu~\textit{et al.}~\cite{Liu2011} who classified only the foveal scan for each patient.
+We will show in the experiments, Section~4, that using the 3D-\ac{lbp} descriptor provides better classification performances than extraction \ac{lbp} in each individual B-scan.
 
-This paper is organized as follows. In Section~2, we describe the features extraction methodology and the classification approach based on the BoW method.
+This paper is organized as follows. In Section~2, we describe the features extraction methodology and the classification approach based on the \ac{bow} method.
 Section~3 shows experimental results using two different datasets and comparison with another approach. Finally, the paper ends with concluding remarks in Section~4.
 
 %----------
