added the machine learning schema

--- a/content/method/method.tex
+++ b/content/method/method.tex
@@ -22,7 +22,7 @@
    
 \begin{figure}[h]
 \centering{
-  \includegraphics[width=1\textwidth]{mm.pdf}}
+  \includegraphics[width=1\textwidth]{ml}}
   \caption{Machine learning classification basic scheme}
   \label{fig:ML-scheme}
 \end{figure}
