--- a/master.tex
+++ b/master.tex
@@ -24,7 +24,9 @@ THIS IS THE ABSTRACT
 \acresetall  % reset the acronyms from the abstract
 \input{content/intro/intro}          % the file wihtout .tex
 \input{content/method/method} 
+\input{content/experiment/experiment}
 \input{content/results/results}
+
 
 \section{Conclusions}
 
