--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -5,7 +5,7 @@
 
 
 \begin{table}
-\caption{Obtained results with Lbp, Lbp+pca and Lbp-Top features and RF with 100 trees on our dataset}
+\caption{Obtained results with Lbp, Lbp+pca and Lbp-Top features and RF with 100 trees on SERI dataset}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
 \toprule
@@ -21,6 +21,46 @@ Features 	& & &\multicolumn{4}{c}{LBP}&	 & & & &\multicolumn{4}{c}{LBP+PCA}& & &
 \end{tabular}
 \label{tab:LbPTopVolumeResult}
 \end{table}
+
+
+
+\begin{table}
+\caption{Obtained results for Lbp+BoW, LBP+BoW+SW, Lbp-Top+BoW+SW features and RF with 100 trees on SERI dataset. The BoW is computed with 32 visual words for all the experiments}
+\centering
+\begin{tabular}{lcclcclcccclcclcccclcclc}
+\toprule
+Features 	& & &\multicolumn{4}{c}{LBP+BoW}&	 & & & &\multicolumn{4}{c}{LBP+BoW+SW}& & & & &\multicolumn{4}{c}{LBP-TOP+BoW} &\\
+  \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
+	       & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
+\midrule
+ $8^{riu2}$ 						& & & 50.00 & & & 81.25 & & & & & 75.00 & & & 87.50 & & & & & - & & & - & \\	
+ $16^{riu2}$						& & & 57.50 & & & 68.75 & & & & & 81.25 & & & 75.00 & & & & & - & & & - & \\	
+ $24^{riu2}$						& & & 50.00 & & & 50.00 & & & & & 68.75 & & & 62.5 & & & & & - & & & - & \\
+ %$\lbrace 8,16,24\rbrace^{riu2}$	& & & 37.50 & & & 56.25 & & & & & \textbf{68.75} & & & \textbf{68.75} & & & & & \textbf{81.25} & & & \textbf{81.25} & \\
+\bottomrule
+\end{tabular}
+\label{tab:SERIBoWResult}
+\end{table}
+
+
+\begin{table}
+\caption{Obtained results for LBP+BoW+SW, Lbp-Top+BoW+SW features and RF with 100 trees on Duke dataset. The BoW is computed with 32 visual words for all the experiments}
+\centering
+\begin{tabular}{lcclcclcccclcclc}
+\toprule
+Features 	& & &\multicolumn{4}{c}{LBP+BoW+SW}&	 & & & &\multicolumn{4}{c}{LBP-TOP+BoW} &\\
+  \cmidrule(l){2-8}  \cmidrule(l){10-16}  
+	       & & & SE & & & SP & & & & & SE & & & SP& \\
+\midrule
+ $8^{riu2}$ 						& & & 80.00 & & & 86.67 & & & & & 80.00 & & & 86.67 & \\	
+ $16^{riu2}$						& & & 86.67 & & & 100.00 & & & & & 86.67 & & & 86.67 & \\	
+ $24^{riu2}$						& & & 93.33 & & & 86.67 & & & & & 60.00 & & & 80.00 & \\
+ %$\lbrace 8,16,24\rbrace^{riu2}$	& & & 37.50 & & & 56.25 & & & & & \textbf{68.75} & & & \textbf{68.75} & & & & & \textbf{81.25} & & & \textbf{81.25} & \\
+\bottomrule
+\end{tabular}
+\label{tab:DukeBoWResult}
+\end{table}
+
 
 %----------
 
