In the way to correct the introduction

--- a/latex/filesystem/package.tex
+++ b/latex/filesystem/package.tex
@@ -95,6 +95,11 @@
 
 % SI units
 \usepackage{siunitx}
+% Define the money way to write
+\sisetup{
+  group-four-digits = true,
+  group-separator = {,}
+}
 
 % Nice package with citeauthor
 %\usepackage{natbib}
