Results Table 1, Table 2 - 1 and Table 3

--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -33,8 +33,8 @@ Features 	& & &\multicolumn{4}{c}{LBP+BoW}&	 & & & &\multicolumn{4}{c}{LBP+BoW+S
   \cmidrule(l){2-8}  \cmidrule(l){10-16}  \cmidrule(l){18-24}
 	       & & & SE & & & SP & & & & & SE & & & SP & & & & & SE & & & SP & \\
 \midrule
- $8^{riu2}$ 						& & & 50.00 & & & 81.25 & & & & & 75.00 & & & 87.50 & & & & & - & & & - & \\	
- $16^{riu2}$						& & & 57.50 & & & 68.75 & & & & & 81.25 & & & 75.00 & & & & & - & & & - & \\	
+ $8^{riu2}$ 						& & & 50.00 & & & 81.25 & & & & & 75.00 & & & 87.50 & & & & & 62.50 & & & 68.75 & \\	
+ $16^{riu2}$						& & & 57.50 & & & 68.75 & & & & & 81.25 & & & 75.00 & & & & & 56.25 & & & 37.50 & \\	
  $24^{riu2}$						& & & 50.00 & & & 50.00 & & & & & 68.75 & & & 62.5 & & & & & - & & & - & \\
  %$\lbrace 8,16,24\rbrace^{riu2}$	& & & 37.50 & & & 56.25 & & & & & \textbf{68.75} & & & \textbf{68.75} & & & & & \textbf{81.25} & & & \textbf{81.25} & \\
 \bottomrule
