adapted some acronyms

--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -201,3 +201,14 @@ long= Breast Ultra-Sound
   short = PCA,
   long = Principal Component Analysis
 }
+
+\DeclareAcronym{nlm}{
+  short = NL-mean,
+  long = Non-Local Mean
+}
+
+\DeclareAcronym{lopo}{
+  short = LOPO,
+  long =  Leave-One-Patient Out
+}
+
