--- a/content/experiment/experiment.tex
+++ b/content/experiment/experiment.tex
@@ -1,16 +1,20 @@
 % % include the figures path relative to the master file
 % \graphicspath{ {./content/results/figures/} }
 
-\section{Experiments}
+\section{Experiments and Validation }
 \subsection{Datasets}
 \subsubsection{SERI} - dataset contains 32 OCT volumes (16 DME and 16 normal). This dataset was acquired in \textbf{Institutional Review Board-approved protocols} using CIRRUS TM (Carl Zeiss Meditec, Inc, Dublin, CA) SD-OCT device. All SD-OCT images are read and assessed by trained graders and identifies as normal or DME cases based on evaluation of retinal thickening, hard exudates, intraretinal cystoid space formation and subretinal fluid. This dataset was acquired by our colleagues from Singapore Eye Research Institute (SERI). 
 
 \subsubsection{Duke} - dataset published by Srinivasan et al. \cite{Srinivasan2014}, consists of 45 OCT volumes (15 AMD, 15 DME and 15 normal). All the SD-OCT volumes were acquired in Institutional Review Board-approved protocols using Spectralis SD-OCT (Heidelberg Engineering Ins., Heidelberg, Germany) imaging at Duke University, Harvard University and Michigan University. In this study we only consider a subset of the original data containing 15 DME and 15 normal OCT volumes.
 
-\subsection{Evaluation}
-The SERI dataset is provided in complete SD-OCT volumes by 512$\times$1024$\times$128 dimensions. Using this dataset, first the three low-level features such as \textit{LBP}, \textit{LBP+PCA} and \textit{LBP-TOP} are extracted. These descriptors are calculated with the $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The features are classified using RF with 100 tress. The relative results are shown in Tab. \ref{tab:LbPTopVolumeResult}. 
+\subsection{Validation}
 
-The second experiment is carried using high-level features and BoW approach.  
+\subsection{Experiment}
+The SERI dataset is provided in complete SD-OCT volumes by 512$\times$1024$\times$128 dimensions. Using this dataset, first the three low-level features such as \textit{LBP}, \textit{LBP+PCA} and \textit{LBP-TOP} are extracted. The rotation invariant uniform ($riu2$) descriptors are calculated with the $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The features are classified using RF with 100 tress. Table \ref{tab:LbPTopVolumeResult} shows the relative results for $8riu2$, $16riu2$, $24riu2$ and their combination $8riu2 + 16riu2 + 24riu2$. The results are presented in terms of sensitivity (SE) and specificity (SP) percentages.  
+
+The second experiment is carried out using high-level features and BoW approach, on SERI dataset. The first high-level feature \textit{LBP+BOW} is obtained by applying BoW with 32 visual-words on the previously low-level \textit{LBP} features (applied on each B-scan). The second and third high-level descriptors are obtained using a dense approach by applying the sliding window (\textit{SW}) on each B-scan and the whole volume respectively. \textit{LBP+BoW+SW} represent the second high-level feature where the 2D-LBP features are extracted for each sliding window on each B-scan and the visual-words are selected from the pool, consisting of their histograms. The third high-level feature, \textit{LBP-TOP+BoW+SW}, is defined using LBP-TOP. By using the sliding window the 3D-LBP features are extracted for each patch. Same as previous experiment with low-level features, the descriptors are calculated with the $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The obtained results of this experiment are illustrated in Tab. \ref{tab:SERIBoWResult}. 
+
+In order to compare our proposed framework the third experiment is carried out using the subsection of Duke dataset \citep{Srinivasan2014}. The OCT volumes provided by this dataset are of different volume size, cropped and denoised by the method of authors choice. Subsequently only the second experiment with high-level features comply with these requirements. Same as the previous experiment BoW for all the features are obtained by 32 visual-words and the 2D and 3D LBP features are extracted with $P$ number of 8, 16 and 24 for the radius if 1, 2 and 3 respectively. The obtained results for this experiment are shown in Tab. \ref{tab:DukeBoWResult}.
 %----------
 
 %%% Local Variables: 
